--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "use-bem-css",
-  "version": "1.0.0",
+  "name": "@shinspiegel/use-bem-css",
+  "version": "0.1.0",
   "description": "A BEM CSS custom hook helper",
   "author": "ShinSpiegel",
   "license": "MIT",
@@ -22,7 +22,14 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
   },
-  "dependencies": {},
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4"
+  },
   "peerDependencies": {
     "react": "^16.9.0"
   },
@@ -43,8 +50,6 @@
     "react-scripts": "^3.4.0",
     "react-test-renderer": "^16.9.0",
     "rollup": "^2.26.9",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "tslib": "^2.0.1",
-    "typescript": "^3.2.4"
+    "rollup-plugin-peer-deps-external": "^2.2.0"
   }
 }
