--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@shinspiegel/use-bem-css",
-  "version": "0.1.0",
-  "description": "A BEM CSS custom hook helper",
+  "version": "0.1.1",
+  "description": "A hook to generate BEM styled string to use on classNames for react components",
+  "homepage": "https://shinspiegel.github.io/use-bem-css/",
   "author": "ShinSpiegel",
   "license": "MIT",
   "repository": "shinspiegel/use-bem-css",
@@ -34,22 +35,22 @@
     "react": "^16.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/runtime": "^7.3.1",
-    "@rollup/plugin-babel": "^5.2.0",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^5.0.2",
-    "@rollup/plugin-url": "^5.0.1",
-    "@testing-library/react-hooks": "^3.2.1",
-    "@types/jest": "^23.3.13",
-    "@types/react": "^16.7.22",
-    "cross-env": "^5.2.0",
-    "gh-pages": "^2.0.1",
-    "react": "^16.9.0",
-    "react-scripts": "^3.4.0",
-    "react-test-renderer": "^16.9.0",
-    "rollup": "^2.26.9",
-    "rollup-plugin-peer-deps-external": "^2.2.0"
+    "@babel/core": "^7.18.0",
+    "@babel/runtime": "^7.18.0",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "@rollup/plugin-url": "^7.0.0",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@types/jest": "^27.5.1",
+    "@types/react": "^18.0.9",
+    "cross-env": "^7.0.3",
+    "gh-pages": "^4.0.0",
+    "react": "^18.1.0",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "^18.1.0",
+    "rollup": "^2.74.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   }
 }
