--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shinspiegel/use-bem-css",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A hook to generate BEM styled string to use on classNames for react components",
   "homepage": "https://shinspiegel.github.io/use-bem-css/",
   "author": "ShinSpiegel",
@@ -27,16 +27,12 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "dependencies": {
-    "tslib": "^2.4.0",
-    "typescript": "^4.6.4"
-  },
   "peerDependencies": {
     "react": "^16.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.0",
-    "@babel/runtime": "^7.18.0",
+    "@babel/core": "^7.18.2",
+    "@babel/runtime": "^7.18.3",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
@@ -51,6 +47,8 @@
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.1.0",
     "rollup": "^2.74.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.2"
   }
 }
