--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "dependencies": {
     "react": "link:../node_modules/react",
-    "react-dom": "^18.1.0",
+    "react-dom": "^17.0.0",
     "react-highlight": "^0.14.0",
     "react-scripts": "^5.0.1",
     "use-bem-css": "link:.."
@@ -22,5 +22,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "typescript": "^4.8.4"
+  }
 }
