--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "npm": ">=5"
   },
   "scripts": {
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test": "vitest",
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c && tsc -d --emitDeclarationOnly --noEmit false --declarationDir dist",
     "start": "rollup -c -w",
@@ -35,23 +35,32 @@
     "@babel/core": "^7.18.2",
     "@babel/plugin-syntax-flow": "^7.18.6",
     "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.18.3",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
-    "@rollup/plugin-url": "^7.0.0",
-    "@testing-library/react-hooks": "^8.0.0",
-    "@types/jest": "^27.5.1",
+    "@rollup/plugin-url": "^7.0",
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16",
+    "@testing-library/react": "^12",
+    "@testing-library/react-hooks": "^8.0",
+    "@testing-library/user-event": "^14.4",
+    "@types/jest": "^29.1.2",
     "@types/react": "^17.0.0",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.1.0",
     "cross-env": "^7.0.3",
     "gh-pages": "^4.0.0",
+    "jsdom": "^20.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "^5.0.1",
     "rollup": "^2.74.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "tslib": "^2.4.0",
-    "typescript": "^4.6"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.6",
+    "vitest": "^0.24.0"
   }
 }
