--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "npm": ">=5"
   },
   "scripts": {
-    "test": "vitest",
+    "test": "vitest run",
+    "test-watch": "vitest",
     "build": "rollup -c && tsc -d --emitDeclarationOnly --noEmit false --declarationDir dist",
     "start": "rollup -c -w",
     "prepare": "yarn run build",
