--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shinspiegel/use-bem-css",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A hook to generate BEM styled string to use on classNames for react components",
   "homepage": "https://shinspiegel.github.io/use-bem-css/",
   "author": "ShinSpiegel",
@@ -58,6 +58,7 @@
     "react-dom": "^17.0.0",
     "rollup": "^2.74.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.8.4",
     "vite": "^3.1.6",
