--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shinspiegel/use-bem-css",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "A hook to generate BEM styled string to use on classNames for react components",
   "homepage": "https://shinspiegel.github.io/use-bem-css/",
   "author": "ShinSpiegel",
@@ -9,11 +9,7 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
-  "jsnext:main": "dist/index.es.js",
-  "engines": {
-    "node": ">=8",
-    "npm": ">=5"
-  },
+  "type": "module",
   "scripts": {
     "test": "vitest run",
     "test-watch": "vitest",
@@ -33,37 +29,37 @@
     "typescript": ">=4.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/plugin-syntax-flow": "^7.18.6",
-    "@babel/plugin-transform-react-jsx": "^7.19.0",
-    "@babel/preset-typescript": "^7.18.6",
-    "@babel/runtime": "^7.18.3",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@rollup/plugin-url": "^7.0",
-    "@testing-library/dom": "^8.19.0",
-    "@testing-library/jest-dom": "^5.16",
-    "@testing-library/react": "^12",
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-syntax-flow": "^7.23.3",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@babel/preset-typescript": "^7.23.3",
+    "@babel/runtime": "^7.23.9",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-url": "^8.0",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.3",
+    "@testing-library/react": "^14",
     "@testing-library/react-hooks": "^8.0",
-    "@testing-library/user-event": "^14.4",
-    "@types/jest": "^29.1.2",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@testing-library/user-event": "^14.5",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
     "cross-env": "^7.0.3",
-    "gh-pages": "^4.0.0",
-    "jsdom": "^20.0.1",
-    "prettier": "^3.0.3",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "rollup": "^2.74.1",
+    "gh-pages": "^6.1.1",
+    "jsdom": "^24.0.0",
+    "prettier": "^3.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup": "^4.9.6",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.6",
-    "vitest": "^0.24.0"
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vitest": "^1.2.1"
   }
 }
